--- a/elastic_constants/clean raw frequency data.ipynb
+++ b/elastic_constants/clean raw frequency data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['2288_no_outliers_cooling.dat']"
+       "['2551_no_outliers_cooling_120408.dat',\n",
+       " '2657_no_outliers_cooling_120408.dat',\n",
+       " '2869_no_outliers_cooling_120408.dat']"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 2
     }
    ],
    "source": [
@@ -50,6 +52,7 @@
     "# project = '\\\\UTe2\\\\RUS\\\\UTe2_2007C\\\\PLL\\\\201105'\n",
     "# project = '\\\\UTe2\\\\RUS\\\\UTe2_2007C\\\\Red Pitaya\\\\201111\\\\monitor_1'\n",
     "project = \"\\\\Mn3X\\\\Mn3.1Sn0.89\\\\RUS\\\\2010A\\\\good_data\\\\raw_data\"\n",
+    "project = '\\\\Mn3X\\\\Mn3Ge\\\\RUS\\\\Mn3Ge_2103B\\\\good_data\\\\raw_data'\n",
     "\n",
     "data_files = os.listdir(folder+project)\n",
     "data_files = [i for i in data_files if i[-4:]=='.dat']\n",
@@ -59,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
+    "i = 2\n",
     "filename = filenames[i]\n",
     "data = data_extract(filename)\n",
     "T = data.import_data(1,3)[0]\n",
@@ -140,18 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x24978dfba90>"
+       "<matplotlib.collections.PathCollection at 0x1e18f3d8370>"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 20
     }
    ],
    "source": [
@@ -176,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1575 1575\n"
+      "1046 1046\n"
      ]
     }
    ],
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,18 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12d73325dd8>"
+       "<matplotlib.collections.PathCollection at 0x1e18f3f23d0>"
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 23
     }
    ],
    "source": [
@@ -267,18 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12d6f074668>"
+       "<matplotlib.collections.PathCollection at 0x1e18e3cbe50>"
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 24
     }
    ],
    "source": [
@@ -404,21 +407,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(13,8))\n",
-    "Tmin = 420\n",
-    "Tmax = 425\n",
+    "Tmin = 428\n",
+    "Tmax = 438\n",
     "\n",
     "mask = (T > Tmin) & (T < Tmax)\n",
     "plt.scatter(T[mask],f[mask])\n",
     "\n",
-    "T1 = 420.5\n",
-    "T2 = 421.8\n",
-    "T3 = 422.8\n",
-    "T4 = 423.5\n",
+    "T1 = 429\n",
+    "T2 = 430\n",
+    "T3 = 434\n",
+    "T4 = 435\n",
     "\n",
     "mask1 = ((T>T1) & (T<T2))\n",
     "mask2 = ((T>T3) & (T<T4))\n",
@@ -426,7 +429,7 @@
     "plt.plot( T[mask1], f[mask1], c='red')\n",
     "plt.plot( T[mask2], f[mask2], c='green')\n",
     "\n",
-    "Tc = 422.56\n",
+    "Tc = 432.5\n",
     "\n",
     "#plt.plot([Tc, Tc], [np.mean(f)-1, np.mean(f)+1], c='orange')\n",
     "plt.plot([Tc, Tc], [min(f[(T>Tmin)&(T<Tmax)]), max(f[(T>Tmin)&(T<Tmax)])], c='orange')\n",
@@ -436,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,18 +474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x24978f987c0>"
+       "<matplotlib.collections.PathCollection at 0x1742726f6a0>"
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 75
     }
    ],
    "source": [
@@ -499,24 +502,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21ac634ceb0>"
+       "<matplotlib.collections.PathCollection at 0x1f1ee1dd370>"
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 50
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "threshold = .2\n",
+    "threshold = .15\n",
     "fmedian = pd.DataFrame(f).rolling(window=3, center=True).median().fillna(method='bfill').fillna(method='ffill').to_numpy().flatten()\n",
     "\n",
     "difference = np.abs(f - fmedian)\n",
@@ -529,18 +532,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x256a9c01d90>"
+       "<matplotlib.collections.PathCollection at 0x1f1f0598e80>"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 51
     }
    ],
    "source": [
@@ -554,18 +557,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x13549ebe2e8>"
+       "<matplotlib.collections.PathCollection at 0x1742b32c5f8>"
       ]
      },
      "metadata": {},
-     "execution_count": 116
+     "execution_count": 118
     }
    ],
    "source": [
@@ -575,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -584,22 +587,22 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "7.0 190.0\n"
+      "4.0 290.0\n"
      ]
     }
    ],
    "source": [
     "Tcl1 = 1.2\n",
     "Tcl2 = 3\n",
-    "Tcl1 = 420\n",
-    "Tcl2 = 424\n",
+    "Tcl1 = 425\n",
+    "Tcl2 = 445\n",
     "clean_mask = (T>Tcl1) & (T<Tcl2)\n",
     "\n",
     "fclean = f[clean_mask]\n",
     "Tclean = T[clean_mask]\n",
     "gclean = g[clean_mask]\n",
     "data_clean = odr.RealData(Tclean, fclean)\n",
-    "initial_guess_clean = [0,0,0]\n",
+    "initial_guess_clean = [0,0,0,0,0]\n",
     "fix_clean = [1,1,1,1,1]\n",
     "model_clean = odr.Model(fct)\n",
     "fit_clean = odr.ODR(data_clean, model_clean, beta0=initial_guess_clean)#, ifixb=fix_clean)\n",
@@ -607,7 +610,7 @@
     "popt_clean = out_clean.beta\n",
     "\n",
     "\n",
-    "epsilon = .015\n",
+    "epsilon = .2\n",
     "index = abs(fclean - fct(popt_clean, Tclean)) < epsilon\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
@@ -621,18 +624,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2497d915b80>"
+       "<matplotlib.collections.PathCollection at 0x1e18de29e20>"
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 29
     }
    ],
    "source": [
@@ -652,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,9 +780,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd0b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f",
+   "display_name": "Python 3.8.5 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -791,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
